--- a/packages/spotinst/mock_api/package.json
+++ b/packages/spotinst/mock_api/package.json
@@ -4,6 +4,7 @@
   "license": "Apache-2.0",
   "keywords": [],
   "dependencies": {
+    "dynamodb-atomic-counter": "^0.1.1",
     "shortid": "^2.2.6",
     "uuid": "^3.0.1"
   }
